k8s/flux/hello-app/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: hello-app
spec:
  redirectScheme:
    scheme: https
    permanent: true
