k8s/flux/hello-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      imagePullSecrets:
        - name: ecr-pull-secret
      containers:
        - name: hello-app
          image: 136583899808.dkr.ecr.us-east-1.amazonaws.com/hello-app:v1.0.0 # {"$imagepolicy": "flux-system:hello-app-policy"}
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  namespace: hello-app
spec:
  selector:
    app: hello-app
  ports:
    - port: 80
      targetPort: 8080
